<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backcolor"
    xmlns:ads="http://schemas.android.com/apk/res-auto"

    tools:context="com.modanwalmatrimonialsamaj.Nameactivity">



    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/typename" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/editText"
        android:layout_alignRight="@+id/editText"
        android:layout_below="@+id/editText"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:hint="@string/typefather"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/editText3"
        android:layout_alignRight="@+id/editText3"
        android:layout_below="@+id/editText3"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:hint="@string/typeheight"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText4"
        android:layout_alignStart="@+id/editText4"
        android:layout_below="@+id/editText4"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:hint="@string/typecolor"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText5"
        android:layout_alignStart="@+id/editText5"
        android:layout_below="@+id/editText5"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/typemobile"
        android:inputType="phone" />

    <TextView
        android:id="@+id/editText7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText6"
        android:layout_alignStart="@+id/editText6"
        android:layout_below="@+id/editText6"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/typeDob"
        android:textSize="20sp"
        android:inputType="number"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:text="@string/Name" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText3"
        android:layout_alignBottom="@+id/editText3"
        android:layout_alignLeft="@+id/textView6"
        android:layout_alignStart="@+id/textView6"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:text="@string/Fathername" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText5"
        android:layout_alignLeft="@+id/textView7"
        android:layout_alignStart="@+id/textView7"
        android:layout_marginBottom="11dp"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:text="@string/Height" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText5"
        android:layout_alignBottom="@+id/editText5"
        android:layout_alignEnd="@+id/textView6"
        android:layout_alignRight="@+id/textView6"
        android:text="@string/Color"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText6"
        android:layout_alignBottom="@+id/editText6"
        android:layout_alignLeft="@+id/textView9"
        android:layout_alignStart="@+id/textView9"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:text="@string/mobile" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView10"
        android:layout_alignLeft="@+id/textView10"
        android:layout_alignTop="@+id/editText7"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="1dp"
        android:text="@string/Dob"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button8"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
       android:layout_centerHorizontal="true"
        android:layout_marginTop="500dp"
        android:background="@drawable/roundshapebtn"
        android:text="@string/next"
        android:textColor="@color/darkwhite"
        />
    <Button
        android:id="@+id/button4"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="600dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/roundshapebtn"
        android:text="@string/back"
        android:textColor="@color/darkwhite" />
</RelativeLayout>
