<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/backcolor"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="com.modanwalmatrimonialsamaj.Creatprofile">

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="150dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="250dp"
        android:entries="@array/state"/>

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_alignTop="@+id/spinner"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="150dp"/>

    <Spinner
        android:id="@+id/spinner3"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/spinner2"
        android:layout_alignStart="@+id/spinner2"
        android:layout_alignTop="@+id/spinner2"
        android:layout_below="@+id/spinner2"
        android:layout_marginTop="50dp"
        android:entries="@array/Gender"/>

    <Spinner
        android:id="@+id/spinner4"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/spinner3"
        android:layout_alignStart="@+id/spinner3"
        android:layout_alignTop="@+id/spinner3"
        android:layout_below="@+id/spinner3"
        android:layout_marginTop="50dp"
        android:entries="@array/Profession"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="23dp"
        android:textColor="@color/white"
        android:layout_marginStart="23dp"
        android:textSize="25sp"
        android:text="@string/state1" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:text="@string/district"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="350dp"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:text="@string/gender" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:text="@string/profession" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="190dp"
        android:layout_marginLeft="150dp"
        android:ems="10"
        android:hint="@string/typevillage"
        android:inputType="textPersonName"
        android:text=""
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView3"
        android:layout_alignLeft="@+id/textView3"
        android:layout_marginTop="200dp"
        android:text="@string/village"
        android:textColor="@color/white"
        android:textSize="25sp" />


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        />
    <TextView
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:layout_marginTop="80dp"
        android:textColor="@color/darkwhite"
        android:text="@string/uploadphoto" />

    <Button
        android:id="@+id/button3"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="141dp"
        android:background="@drawable/roundshapebtn"
        android:text="@string/submit"
        android:textColor="@color/darkwhite" />

    <Button
        android:id="@+id/button5"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:background="@drawable/roundshapebtn"
        android:text="@string/back"
        android:textColor="@color/darkwhite" />


</RelativeLayout>
