<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/listview_"
    android:background="@drawable/backcolor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.modanwalmatrimonialsamaj.Search">

    <Spinner
        android:id="@+id/spinner5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="150dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="150dp"
        android:entries="@array/state" />

    <Spinner
        android:id="@+id/spinner6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/spinner5"
        android:layout_centerVertical="true"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="65dp" />

    <Spinner
        android:id="@+id/spinner7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spinner6"
        android:layout_alignStart="@+id/spinner6"
        android:layout_alignTop="@+id/spinner6"
        android:layout_below="@+id/spinner6"
        android:layout_marginTop="65dp"
        android:entries="@array/Gender" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/spinner5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="23dp"
        android:layout_marginStart="23dp"
        android:text="@string/state1"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/spinner6"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:text="@string/district"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/spinner7"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:text="@string/gender"
        android:textColor="@color/white"
        android:textSize="25sp" />
    <Button
        android:id="@+id/bsubmit"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="440dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/roundshapebtn"
        android:text="@string/submit"
        android:textColor="@color/darkwhite" />

    <Button
        android:id="@+id/bback"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
       android:layout_marginTop="540dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/roundshapebtn"
        android:text="@string/back"
        android:textColor="@color/darkwhite" />

</RelativeLayout>
