<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    app:cardCornerRadius="15dp"
    android:layout_margin="5dp"
    android:elevation="90dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:orientation="vertical"
        android:background="@drawable/backcolor"
        >

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="38dp"
            android:layout_marginRight="38dp"
            android:text="Rajesh Modanwal"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView13"
            android:layout_marginLeft="140dp"
            android:layout_marginStart="140dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:text="@string/Dob" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView14"
            android:layout_alignBottom="@+id/textView14"
            android:layout_alignEnd="@+id/textView13"
            android:layout_alignRight="@+id/textView13"
            android:text="28/09/1997" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textView18"
            android:layout_alignLeft="@+id/textView14"
            android:layout_alignStart="@+id/textView14"
            android:layout_marginBottom="13dp"
            android:text="@string/profession"
            android:textColor="#ffffff" />
        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView16"
            android:layout_alignLeft="@+id/textView15"
            android:layout_alignStart="@+id/textView15"
            android:text="SeniorEngineer" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView16"
            android:layout_alignStart="@+id/textView16"
            android:layout_centerVertical="true"
            android:textColor="#ffffff"
            android:text="@string/Color" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView16"
            android:layout_toEndOf="@+id/textView16"
            android:layout_toRightOf="@+id/textView16"
            android:text="Gehuva" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView19"
            android:layout_alignBottom="@+id/textView19"
            android:layout_alignLeft="@+id/textView17"
            android:textColor="@color/white"
            android:layout_alignStart="@+id/textView17"
            android:text="@string/Height" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView21"
            android:layout_marginLeft="19dp"
            android:layout_marginStart="19dp"
            android:layout_toEndOf="@+id/textView21"
            android:layout_toRightOf="@+id/textView21"
            android:text="5.9" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView18"
            android:layout_alignStart="@+id/textView18"
            android:layout_below="@+id/textView18"
            android:layout_marginTop="14dp"
            android:textColor="@color/white"
            android:text="@string/Fathername" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView21"
            android:layout_alignStart="@+id/textView21"
            android:layout_alignTop="@+id/textView23"
            android:text="Ramesh gupta" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:layout_marginLeft="16dp"
            android:layout_marginTop="180dp"
            android:textColor="@color/white"
            android:text="EmailId:" />

        <TextView
            android:id="@+id/textView26"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="180dp"
            android:text="ashishgupta.ipec05@gmail.com" />

        <TextView
            android:id="@+id/textView27"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="210dp"
            android:textColor="@color/white"
            android:text="@string/address" />

        <TextView
            android:id="@+id/textView28"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="210dp"
            android:text="Godhana,Bhadohi,UttarPradesh" />

        <TextView
            android:id="@+id/textView29"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="120dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:textColor="@color/white"
            android:text="@string/mobile" />

        <TextView
            android:id="@+id/textView41"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:text="9239456745" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_alignBottom="@+id/textView16"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            />



    </RelativeLayout>
</android.support.v7.widget.CardView>